@@ -1,9 +1,13 @@
+2006-07-17  Raul Mateos  <raulofpandora@gmail.com>
+
+	* configurar_agente.php. Solved small bug that only show the last alert when creating alert in an agent, but the alert was created into database.
+
 2006-07-13 Sancho Lerena <sancho.lerena@artica.es>
 
-        * estado_grupo.php. Fix bug viewing groups, agent intervar was not read and 
+	* estado_grupo.php. Fix bug viewing groups, agent intervar was not read and 
 	misused, resulting in a bad result of module down total sum.
 
-        * Some headers changed to show the "official" GPL Header info
+	* Some headers changed to show the "official" GPL Header info
 
 	* godmode/setup/setup.php: Fixed small bug showing filelist.
 
